# useful-algorithms

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  serial_algorithm.hpp  useful_algorithms.cbp
include/parallel/: PSRS.hpp  algorithm.hpp  bitonicsort.hpp  blocklb.hpp  geomedian.hpp  quickselect.hpp
include/serial/: algorithm.hpp  format.hpp  type.hpp
tests/: main.cpp  par_tests.cpp  ser_tests.cpp
